force-app/main/default/objects/Sales_Goal_Data__c/Sales_Goal_Data__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Sales Goal Data - Data provided by HRC</description>
    <label>Sales Goal Data</label>
    <nameField>
        <displayFormat>SG-{0000000}</displayFormat>
        <label>Sales Goal Data #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Goal Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>