force-app/main/default/objects/Sales_Goal_Data__c/fields/CRTD_BY__c.field-meta.xml
<CustomField>
    <fullName>CRTD_BY__c</fullName>
    <description>Indicates the user who created the sales goal data outside of Salesforce.</description>
    <label>CRTD_BY</label>
    <length>10</length>
    <type>Text</type>
</CustomField>