force-app/main/default/objects/Sales_Goal_Data__c/fields/CRTD_DT__c.field-meta.xml
<CustomField>
    <fullName>CRTD_DT__c</fullName>
    <description>Indicates the date the sales goal data record was created outside of Salesforce</description>
    <label>CRTD_DT</label>
    <type>DateTime</type>
</CustomField>