force-app/main/default/objects/Sales_Goal_Data__c/fields/EFF_DT__c.field-meta.xml
<CustomField>
    <fullName>EFF_DT__c</fullName>
    <description>Indicates the date the goal starts</description>
    <label>EFF_DT</label>
    <type>Date</type>
</CustomField>