force-app/main/default/objects/Sales_Goal_Data__c/fields/EXP_DT__c.field-meta.xml
<CustomField>
    <fullName>EXP_DT__c</fullName>
    <description>Indicates the date the goal ends.</description>
    <label>EXP_DT</label>
    <type>Date</type>
</CustomField>