force-app/main/default/objects/Sales_Goal_Data__c/fields/FK_ORG_HIERARCHY__c.field-meta.xml
<CustomField>
    <fullName>FK_ORG_HIERARCHY__c</fullName>
    <label>FK_ORG_HIERARCHY</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>