force-app/main/default/objects/Sales_Goal_Data__c/fields/GOAL_LVL_1__c.field-meta.xml
<CustomField>
    <fullName>GOAL_LVL_1__c</fullName>
    <label>GOAL_LVL_1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>