force-app/main/default/objects/Sales_Goal_Data__c/fields/GOAL_LVL_2__c.field-meta.xml
<CustomField>
    <fullName>GOAL_LVL_2__c</fullName>
    <label>GOAL_LVL_2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>