force-app/main/default/objects/Sales_Goal_Data__c/fields/JDE_User_External_ID__c.field-meta.xml
<CustomField>
    <fullName>JDE_User_External_ID__c</fullName>
    <description>Unique ID from JDE indicating which user the Sales Goal record is associated with.</description>
    <label>JDE User External ID</label>
    <length>125</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>