force-app/main/default/objects/Sales_Goal_Data__c/fields/LST_UPDT_BY__c.field-meta.xml
<CustomField>
    <fullName>LST_UPDT_BY__c</fullName>
    <description>Indicates the user who last modified the sales goal data outside of Salesforce</description>
    <label>LST_UPDT_BY</label>
    <length>10</length>
    <type>Text</type>
</CustomField>