force-app/main/default/objects/Sales_Goal_Data__c/fields/LST_UPDT_DT__c.field-meta.xml
<CustomField>
    <fullName>LST_UPDT_DT__c</fullName>
    <description>Indicates the date the sales goal data record was last updated outside of Salesforce</description>
    <label>LST_UPDT_DT</label>
    <type>DateTime</type>
</CustomField>