force-app/main/default/objects/Sales_Goal_Data__c/fields/M10_GOAL__c.field-meta.xml
<CustomField>
    <fullName>M10_GOAL__c</fullName>
    <description>Total goal for the tenth month of the fiscal year.</description>
    <label>M10_GOAL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>