force-app/main/default/objects/Sales_Goal_Data__c/fields/M10_OPEN__c.field-meta.xml
<CustomField>
    <fullName>M10_OPEN__c</fullName>
    <description>Total amount of open orders for the tenth month of the fiscal year.</description>
    <label>M10_OPEN</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>