force-app/main/default/objects/Sales_Goal_Data__c/fields/M10_SHIPPED__c.field-meta.xml
<CustomField>
    <fullName>M10_SHIPPED__c</fullName>
    <description>Total amount of shipped orders for the tenth month of the fiscal year.</description>
    <label>M10_SHIPPED</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>