force-app/main/default/objects/Sales_Goal_Data__c/fields/M11_INVOICED__c.field-meta.xml
<CustomField>
    <fullName>M11_INVOICED__c</fullName>
    <description>Total amount of invoiced orders for the eleventh month of the fiscal year.</description>
    <label>M11_INVOICED</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>