force-app/main/default/objects/Sales_Goal_Data__c/fields/M12_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>M12_DISCOUNT__c</fullName>
    <description>Total amount of discounts applied for the twelfth month of the fiscal year.</description>
    <label>M12_DISCOUNT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>