force-app/main/default/objects/Sales_Goal_Data__c/fields/M12_GOAL__c.field-meta.xml
<CustomField>
    <fullName>M12_GOAL__c</fullName>
    <description>Total goal for the twelfth month of the fiscal year.</description>
    <label>M12_GOAL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>