force-app/main/default/objects/Sales_Goal_Data__c/fields/PERIOD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PERIOD_TYPE__c</fullName>
    <label>PERIOD_TYPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>