force-app/main/default/objects/Sales_Goal_Data__c/fields/PK_SALES_GOALS__c.field-meta.xml
<CustomField>
    <fullName>PK_SALES_GOALS__c</fullName>
    <label>PK_SALES_GOALS</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>