force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_ADJUSTMENT__c.field-meta.xml
<CustomField>
    <fullName>Q1_ADJUSTMENT__c</fullName>
    <description>The total amount of manual adjustments made in the first quarter of the fiscal year.</description>
    <label>Q1_ADJUSTMENT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>