force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>Q1_DISCOUNT__c</fullName>
    <description>Indicates the total amount of discounts applied to orders for the first quarter of the fiscal year.</description>
    <label>Q1_DISCOUNT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>