force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_GOAL__c.field-meta.xml
<CustomField>
    <fullName>Q1_GOAL__c</fullName>
    <description>Sales goal for the first quarter of the fiscal year.</description>
    <label>Q1_GOAL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>