force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_INVOICED__c.field-meta.xml
<CustomField>
    <fullName>Q1_INVOICED__c</fullName>
    <formula>Q1_INVOICED_RAW__c +  Q1_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1_INVOICED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>