force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Q1_OPEN__c</fullName>
    <description>Amount of open orders for the first quarter of the fiscal year.</description>
    <label>Q1_OPEN</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>