force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_Open_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Q1_Open_Shipped__c</fullName>
    <description>Indicates total amount of open and shipped orders for the first quarter of the fiscal year</description>
    <formula>Q1_OPEN__c +  Q1_SHIPPED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Open/Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>