force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_OPPORTUNITY__c.field-meta.xml
<CustomField>
    <fullName>Q1_OPPORTUNITY__c</fullName>
    <description>Indicates the total amount of Opportunities for the first quarter of the fiscal year.</description>
    <label>Q1_OPPORTUNITY</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>