force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_Over_Under_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q1_Over_Under_to_Quota__c</fullName>
    <description>Dollar amount remaining until hitting the Q1 Quota.</description>
    <formula>Q1_Performance__c - Q1_GOAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 $ Over/(Under) Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>