force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_Percent_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q1_Percent_to_Quota__c</fullName>
    <description>Indicates the percentage of Q1 sales relative to the goal for the quarter.</description>
    <formula>IF( Q1_Performance__c = 0, 0, Q1_Performance__c /Q1_GOAL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 % to Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>