force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_Performance__c.field-meta.xml
<CustomField>
    <fullName>Q1_Performance__c</fullName>
    <description>Indicates the total amount of Q1 sales for comparison against the quarterly goal.</description>
    <formula>Q1_OPEN__c +  Q1_SHIPPED__c +  Q1_INVOICED_RAW__c +  Q1_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>