force-app/main/default/objects/Sales_Goal_Data__c/fields/Q1_SHIPPED__c.field-meta.xml
<CustomField>
    <fullName>Q1_SHIPPED__c</fullName>
    <description>The total amount of shipped orders for the first quarter of the fiscal year.</description>
    <label>Q1_SHIPPED</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>