force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>Q2_DISCOUNT__c</fullName>
    <description>Total amount of discounts applied to orders for the second quarter of the fiscal year.</description>
    <label>Q2_DISCOUNT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>