force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_GOAL__c.field-meta.xml
<CustomField>
    <fullName>Q2_GOAL__c</fullName>
    <description>The sale goal for the second quarter of the fiscal year.</description>
    <label>Q2_GOAL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>