force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_INVOICED__c.field-meta.xml
<CustomField>
    <fullName>Q2_INVOICED__c</fullName>
    <formula>Q2_INVOICED_RAW__c +  Q2_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2_INVOICED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>