force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_INVOICED_RAW__c.field-meta.xml
<CustomField>
    <fullName>Q2_INVOICED_RAW__c</fullName>
    <description>Indicates the total amount of invoiced orders for the second quarter of the fiscal year.</description>
    <label>Q2_INVOICED_RAW</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>