force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Q2_OPEN__c</fullName>
    <description>The total amount of open orders for the second quarter of the fiscal year</description>
    <label>Q2_OPEN</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>