force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_Open_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Q2_Open_Shipped__c</fullName>
    <description>Indicates the total amount of open and shipped orders for the second quarter of the fiscal year</description>
    <formula>Q2_OPEN__c +  Q2_SHIPPED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Open/Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>