force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_Over_Under_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q2_Over_Under_to_Quota__c</fullName>
    <description>Dollar amount remaining until hitting the Q2 Quota.</description>
    <formula>Q2_Performance__c - Q2_GOAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 $ Over/(Under) Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>