force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_PENDING__c.field-meta.xml
<CustomField>
    <fullName>Q2_PENDING__c</fullName>
    <description>The total amount of pending orders for the second quarter of the fiscal year.</description>
    <label>Q2_PENDING</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>