force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_Percent_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q2_Percent_to_Quota__c</fullName>
    <description>Indicates the percentage of Q2 sales relative to the goal for the quarter.</description>
    <formula>IF( Q2_Performance__c = 0, 0, Q2_Performance__c /Q2_GOAL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 % to Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>