force-app/main/default/objects/Sales_Goal_Data__c/fields/Q2_Performance__c.field-meta.xml
<CustomField>
    <fullName>Q2_Performance__c</fullName>
    <description>Indicates the total amount of Q2 sales for comparison against the quarterly goal.</description>
    <formula>Q2_OPEN__c +  Q2_SHIPPED__c +  Q2_INVOICED_RAW__c +  Q2_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>