force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_ADJUSTMENT__c.field-meta.xml
<CustomField>
    <fullName>Q3_ADJUSTMENT__c</fullName>
    <description>Total amount of manual adjustments made in the third quarter of the fiscal year.</description>
    <label>Q3_ADJUSTMENT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>