force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>Q3_DISCOUNT__c</fullName>
    <description>Total amount of discounts applied in the third quarter of the fiscal year.</description>
    <label>Q3_DISCOUNT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>