force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_GOAL__c.field-meta.xml
<CustomField>
    <fullName>Q3_GOAL__c</fullName>
    <description>Sales goal for the third quarter of the fiscal year.</description>
    <label>Q3_GOAL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>