force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_INVOICED__c.field-meta.xml
<CustomField>
    <fullName>Q3_INVOICED__c</fullName>
    <formula>Q3_INVOICED_RAW__c +  Q3_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3_INVOICED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>