force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_Open_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Q3_Open_Shipped__c</fullName>
    <description>Indicates the total amount of open and shipped orders for the third quarter of the fiscal year</description>
    <formula>Q3_OPEN__c + Q3_SHIPPED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Open/Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>