force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_OPP_LOW__c.field-meta.xml
<CustomField>
    <fullName>Q3_OPP_LOW__c</fullName>
    <description>Total amount of all opportunities for the third quarter of the fiscal year that have a probability &gt; 0% and &lt; 30%</description>
    <label>Q3_OPP_LOW</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>