force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_Over_Under_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q3_Over_Under_to_Quota__c</fullName>
    <description>Dollar amount remaining until hitting the Q3 Quota.</description>
    <formula>Q3_Performance__c - Q3_GOAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 $ Over/(Under) Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>