force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_PENDING__c.field-meta.xml
<CustomField>
    <fullName>Q3_PENDING__c</fullName>
    <description>Total amount of pending orders for the third quarter of the fiscal year.</description>
    <label>Q3_PENDING</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>