force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_Percent_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q3_Percent_to_Quota__c</fullName>
    <description>Indicates the percentage of Q3 sales relative to the goal for the quarter.</description>
    <formula>IF( Q3_Performance__c = 0, 0, Q3_Performance__c /Q3_GOAL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 % to Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>