force-app/main/default/objects/Sales_Goal_Data__c/fields/Q3_Performance__c.field-meta.xml
<CustomField>
    <fullName>Q3_Performance__c</fullName>
    <description>Indicates the total amount of Q3 sales for comparison against the quarterly goal.</description>
    <formula>Q3_OPEN__c + Q3_SHIPPED__c + Q3_INVOICED_RAW__c + Q3_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>