force-app/main/default/objects/Sales_Goal_Data__c/fields/ROLE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ROLE_TYPE__c</fullName>
    <label>ROLE_TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>