force-app/main/default/objects/Sales_Goal_Data__c/fields/Sales_Goal_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Goal_External_Key__c</fullName>
    <description>Primary key from warehouse table field, concatenation of territory ~ role ~ goal type ~ Goal Level 1 ~ Goal Level 2 ~ Effective Date ~ Ending Date</description>
    <externalId>true</externalId>
    <label>Sales Goal External Key</label>
    <length>140</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>