force-app/main/default/objects/Sales_Goal_Data__c/fields/Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Sales User in Salesforce who the Sales Goal record is associated with. This will be populated by mapping the JDE External ID&apos;s on the Sales Goal and User objects.</description>
    <label>Sales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Goal_Data</relationshipName>
    <type>Lookup</type>
</CustomField>