force-app/main/default/objects/Sales_Goal_Data__c/fields/TERR_CD__c.field-meta.xml
<CustomField>
    <fullName>TERR_CD__c</fullName>
    <label>TERR_CD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>