force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_ADJUSTMENT__c.field-meta.xml
<CustomField>
    <fullName>YTD_ADJUSTMENT__c</fullName>
    <description>Total amount of manual adjustments applied to orders for the fiscal year.</description>
    <label>YTD_ADJUSTMENT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>