force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>YTD_DISCOUNT__c</fullName>
    <description>Total amount of discounts applied to orders for the fiscal year.</description>
    <label>YTD_DISCOUNT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>