force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_GOAL__c.field-meta.xml
<CustomField>
    <fullName>YTD_GOAL__c</fullName>
    <description>Total sales goal for the current fiscal year.</description>
    <label>YTD_GOAL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>