force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_INVOICED__c.field-meta.xml
<CustomField>
    <fullName>YTD_INVOICED__c</fullName>
    <formula>YTD_INVOICED_RAW__c + YTD_ADJUSTMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD_INVOICED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>