force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_INVOICED_RAW__c.field-meta.xml
<CustomField>
    <fullName>YTD_INVOICED_RAW__c</fullName>
    <description>Total amount of invoiced orders for the fiscal year</description>
    <label>YTD_INVOICED_RAW</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>