force-app/main/default/objects/Sales_Goal_Data__c/fields/YTD_OPEN__c.field-meta.xml
<CustomField>
    <fullName>YTD_OPEN__c</fullName>
    <description>Indicates the total amount of open orders for the fiscal year.</description>
    <label>YTD_OPEN</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>